--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,31 @@ font-family: 'Ubuntu', sans-serif;
 }
 .poster
 {
-  height: 380px;
-    width: 290px;
+  height: 350px;
+    width: 250px;
     object-fit: cover;
+}
+.movieInfoContainer
+{
+  padding: 25px;
+  border-bottom: 1px solid lightgray;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+
+}
+.movieInfo
+{
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 70rem;
+}
+.indInfoHeading{
+  font-size: 15px;
+  font-weight: 600;
+}
+.infoHeading{
+  opacity: 0.7;
 }
